# rust-tts-wrapper

./: .env.example  .gitignore  .rustc_info.json  Cargo.toml  Cross.toml  Dockerfile.cross-aarch64  HANDOFF_WINDOWS_FFI.md  ISSUES.md  LICENSE  README.md  TODO.md  build.rs  cbindgen.toml
.cargo/: config.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  sherpaonnx-live.yml  test.yml
bindings/dotnet/: README.md  RustTtsClient.cs  RustTtsWrapper.Bindings.csproj  TtsClient.cs
bindings/python/: README.md  tts_wrapper.py
bindings/swift/: README.md  TtsClient.swift
cross/: Dockerfile.aarch64-unknown-linux-gnu
examples/: .env.example  README.md  advanced-features-demo.rs  build-instructions.md  logic-check.md  quick-start.rs  sherpaonnx_test.rs  simple-test.rs  speak_test.rs  streaming-audio-demo.rs  validate_credentials.rs  word-boundary-demo.rs
include/: tts_wrapper.h
release/.fingerprint/cfg-if-19b6a7ba2a83a898/: lib-cfg_if  lib-cfg_if.json
release/.fingerprint/libc-fd1fb6238fd757a3/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/proc-macro2-24ccec0982c22195/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/quote-a28d6c41a2f365fd/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/serde_core-fc26435fd8d47d88/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/unicode-ident-1de143011eb6488f/: lib-unicode_ident  lib-unicode_ident.json
scripts/: get-model-url.py
src/: avsynth_engine.rs  cloud_engine.rs  engine.rs  factory.rs  lib.rs  sapi_engine.rs  sherpaonnx_engine.rs  system_engine.rs  types.rs
tests/: ffi_lifecycle.rs  ffi_safety.rs  integration.rs  integration_tests.rs  live_cloud.rs.template  sherpaonnx_live.rs  sherpaonnx_models.rs  trait_methods.rs
