[package]
name = "rust-tts-wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-platform TTS wrapper with C API — mirrors js-tts-wrapper / SwiftTTSWrapper"
repository = "https://github.com/AACTools/rust-tts-wrapper"
keywords = ["tts", "text-to-speech", "speech", "accessibility", "assistive-technology"]
categories = ["accessibility", "api-bindings", "multimedia::audio"]

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[features]
default = ["system", "cloud", "sherpaonnx"]
system = ["speech-dispatcher"]
cloud = ["reqwest", "serde_json", "base64", "speechmarkdown", "tungstenite", "uuid", "url"]
sherpaonnx = ["sherpa-onnx", "serde_json"]
tungstenite = ["dep:tungstenite"]
uuid = ["dep:uuid"]
url = ["dep:url"]
# SpeechMarkdown → SSML preprocessing. Auto-enabled by every engine that
# can consume SSML (cloud, sapi, avsynth). Turn it off explicitly with
# `--no-default-features --features ...` if you want a smaller binary.
speechmarkdown = ["dep:speechmarkdown-rust"]
avsynth = ["speechmarkdown"]
sapi = ["windows", "speechmarkdown"]

[dependencies]
speech-dispatcher = { version = "0.16", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sherpa-onnx = { version = "1.13", optional = true }
base64 = { version = "0.22", optional = true }
speechmarkdown-rust = { version = "0.4", optional = true }
anyhow = "1"
tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"], optional = true }
uuid = { version = "1.23.2", features = ["v4"], optional = true }
url = { version = "2.5.8", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Media_Speech", "Win32_System_Com", "Win32_System_Ole"], optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
